# maseczki

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
include/: Camera.h  DetectionTimer.h  Executor.h  EyesDetection.h  FaceDetection.h  MaskColor.h  MaskDetect.h  MaskDetection.h  MaskOn.h  MouthDetection.h  NoseDetection.h  Painter.h  Properties.h  Resources.h  Timer.h
src/: Camera.cpp  DetectionTimer.cpp  Executor.cpp  EyesDetection.cpp  FaceDetection.cpp  MaskColor.cpp  MaskDetect.cpp  MaskDetection.cpp  MouthDetection.cpp  NoseDetection.cpp  Painter.cpp  Properties.cpp  Timer.cpp  main.cpp
